Add event subscriber
 1. Change makefile for stream option
 2. Add Subscribe rpc in proto
 3. Add Subscribe api method in api_service.go
 4. Add eventEmitter in APIService struct
 5. Add eventEmitter parameter in rpc setup
