# rpc/pb/rpc.swagger.json
@@ -56,6 +56,32 @@
         ]
       }
     },
+    "/v1/subscribe": {
+      "post": {
+        "operationId": "Subscribe",
+        "responses": {
+          "200": {
+            "description": "(streaming responses)",
+            "schema": {
+              "$ref": "#/definitions/rpcpbSubscribeResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/rpcpbSubscribeRequest"
+            }
+          }
+        ],
+        "tags": [
+          "ApiService"
+        ]
+      }
+    },
     "/v1/transaction": {
       "get": {
         "operationId": "GetTransaction",
@@ -312,6 +338,28 @@
         "hash": {
           "type": "string",
           "description": "Hex string of transaction hash."
+        }
+      }
+    },
+    "rpcpbSubscribeRequest": {
+      "type": "object",
+      "properties": {
+        "topics": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "rpcpbSubscribeResponse": {
+      "type": "object",
+      "properties": {
+        "topic": {
+          "type": "string"
+        },
+        "data": {
+          "type": "string"
         }
       }
     },
